Name overflow issue in mobile fixed

--- a/style.css
+++ b/style.css
@@ -148,6 +148,7 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 56px;
   color: #45505b;
   font-family: "Papyrus", fantasy;
+  word-wrap: break-word;
 }
 
 .my-contact {
